--- a/medium.css
+++ b/medium.css
@@ -197,313 +197,7 @@ margin-right: 2%;
 	position: absolute;
 	top: 0;
 }
-menu img
-#topmenu2 .menu {
-	margin-left: -155px;
-	margin-top: 93px;
-}
-#topmenu {
-	background-image: url("topbg.png");
-	background-repeat: repeat-x;
-	height: 88px;
-	width: 100%;
-}
-#topmenu2 {
-	background-image:url(topbg2.png);
-	background-repeat: repeat-x;
-	height:74px;
-	width:100%;
-}
-#titleheader {
-	background-image:url(headerbgstrip.png);
-	background-repeat:repeat-x;
-	height:95px;
-}
-#headertext {
-	background-image: url("knwheader.png");
-	background-position: center center;
-	background-repeat: no-repeat;
-	height: 30px;
-	left: 50%;
-	margin-left: -219px;
-	margin-top: 50px;
-	position: absolute;
-	top: 0;
-	width: 430px;
-}
-#knowabc {
-	background-color: transparent !important;
-	background-image:url(knwabc1.png);
-	background-repeat:no-repeat;
-	height:33px;
-	width:80px;
-	opacity: 1;
-	float:left;
-}
-#accessrisk {
-	background-color: transparent !important;
-	background-image:url(assesrisk1.png);
-	background-repeat:no-repeat;
-	height:33px;
-	width:80px;
-	opacity: 1;
-	float:left;
-}
-#selfcheck {
-	background-color: transparent !important;
-	background-image:url(selfcheck1.png);
-	background-repeat:no-repeat;
-	height:33px;
-	width:80px;
-	opacity: 1;
-	float:left;
-}
-#findcenter {
-	background-color: transparent !important;
-	background-image:url(findcenter1.png);
-	background-repeat:no-repeat;
-	height:33px;
-	width:80px;
-	opacity: 1;
-	float:left;
-}
-#reminder {
-	background-color: transparent !important;
-	background-image:url(reminder1.png);
-	background-repeat:no-repeat;
-	height:33px;
-	width:80px;
-	opacity: 1;
-}
-/* KnowabtABC */
 
-#facts {
-	background-color: transparent !important;
-	background-image:url(interesting.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-#whatis {
-	background-color: transparent !important;
-	background-image:url(whatbc.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-#statistics {
-	background-color: transparent !important;
-	background-image:url(statistics.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-#india {
-	background-color: transparent !important;
-	background-image:url(indiastat.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-#signs {
-	background-color: transparent !important;
-	background-image:url(signs.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-#treatment {
-	background-color: transparent !important;
-	background-image:url(treatment.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-#tips {
-	background-color: transparent !important;
-	background-image:url(tips.png);
-	background-repeat:no-repeat;
-	height:44px;
-	width:283px;
-	opacity: 1;
-}
-.bottomnav {
-	position: relative;
-	width: 100%;
-}
-.btnnav {
-	float: left;
-	padding-left: 2%;
-	padding-top: 5%;
-	width: 100%;
-}
-#leftbtn {
-	float: left;
-}
-#leftnav {
-	background-color: transparent !important;
-	background-image:url(leftarrow.png);
-	background-repeat:no-repeat;
-	height:34px;
-	width:37px;
-	opacity:1;
-}
-#rightnav {
-	background-color: transparent !important;
-	background-image:url(rightarrow.png);
-	background-repeat:no-repeat;
-	height:34px;
-	width:37px;
-	opacity:1;
-}
-#leftbtn .ui-btn {
-	float: left;
-	width: 85px;
-}
-#rightbtn .ui-btn {
-	float: left;
-	width: 85px;
-}
-#rightlogo {
-	background-image: url("btmlogo.png");
-	background-position: 95% center;
-	background-repeat: no-repeat;
-	height: 182px;
-}
-#main-content h3 {
-	font-size: 2em;
-	font-weight: bold;
-}
-#main-content p {
-	font-size: 115%;
-	word-wrap:break-word;
-	 width: 100%;
-}
-#main-content h3
-{
-	 width: 100%;
-	word-wrap:break-word;
-}
-/* AssessRisk */
-
-
-#factors {
-	background-color: transparent !important;
-	background-image: url("riskfactors.png");
-	background-repeat: no-repeat;
-	height: 49px;
-	opacity: 1;
-	width: 319px;
-}
-#asses {
-	background-color: transparent !important;
-	background-image: url("assesselfrisk.png");
-	background-repeat: no-repeat;
-	height: 49px;
-	opacity: 1;
-	width: 319px;
-}
-#recommendation {
-	background-color: transparent !important;
-	background-image: url("recommendation.png");
-	background-repeat: no-repeat;
-	height: 49px;
-	opacity: 1;
-	width: 319px;
-}
-
-#assesrisk .ui-btn {
-    height: 50px;
-}
-#assesheadertext
-{
-		background-image: url("assesriskheader.png");
-	background-position: center center;
-	background-repeat: no-repeat;
-	height: 30px;
-	left: 50%;
-	margin-left: -219px;
-	margin-top: 50px;
-	position: absolute;
-	top: 0;
-	width: 430px;
-}
-
-/* Recommendatios */
-#lowrisk {
-	background-color: transparent !important;
-	background-image: url("lowrisk.png");
-	background-repeat: no-repeat;
-	height: 43px;
-	opacity: 1;
-	width: 273px;
-}
-#modrisk {
-background-color: transparent !important;
-	background-image: url("modrisk.png");
-	background-repeat: no-repeat;
-	height: 43px;
-	opacity: 1;
-	width: 273px;
-}
-.highlight
-{
-   background-color: #ECECED;
-    padding: 2%;
-    width:50%;
-}
-#highrisk {
-	background-color: transparent !important;
-	background-image: url("highrisk.png");
-	background-repeat: no-repeat;
-	height: 43px;
-	opacity: 1;
-	width: 273px;
-}
-
-/* riskcalc calc */
-#riskcalc .ui-btn-up-c {
-	color: #FFF !important;
-}
-#riskcalc .ui-btn-up-d a.ui-link-inherit,#riskcalc .ui-btn-up-c a.ui-link-inherit,#riskcalc .ui-btn-up-b a.ui-link-inherit,#riskcalc .ui-btn-up-a a.ui-link-inherit,#riskcalc .ui-btn-hover-d:visited,#riskcalc .ui-btn-hover-d:hover,#riskcalc .ui-btn-hover-d a.ui-link-inherit,#riskcalc .ui-btn-hover-c:visited,#riskcalc .ui-btn-hover-c:hover,#riskcalc .ui-btn-hover-c a.ui-link-inherit,#riskcalc .ui-btn-hover-a
-{
-	color:#FFF !important;
-}
-
-#riskcalc .ui-select .ui-icon, #riskcalc .ui-select .ui-widget-content .ui-icon {
-	background-color: transparent;
-	background-image: url("arrowdown.png") !important;
-	background-position: 0 2px !important;
-	top: 56% !important
-}
-#risk label.error {
-	color: yellow;
-}
-#risk .calbtn .ui-btn-hover-c, #risk .calbtn .ui-btn-up-c {
-	background-image:-webkit-gradient(linear, left top, left bottom, from(#d2118a), to(#af0068)) !important;
-	background-image:-webkit-linear-gradient(#d2118a, #af0068) !important;
-	background-image:-moz-linear-gradient(#d2118a, #af0068) !important;
-	background-image:-ms-linear-gradient(#d2118a, #af0068) !important;
-	background-image:-o-linear-gradient(#d2118a, #af0068) !important;
-	background-image:linear-gradient(#d2118a, #af0068) !important;
-}
-#risk .ui-select .ui-btn-hover-c, #risk .ui-select .ui-btn-up-c {
-	background-image:-webkit-gradient(linear, left top, left bottom, from(#f393bd), to(#f393bd)) !important;
-	background-image:-webkit-linear-gradient(#f393bd, #f393bd) !important;
-	background-image:-moz-linear-gradient(#f393bd, #f393bd) !important;
-	background-image:-ms-linear-gradient(#f393bd, #f393bd) !important;
-	background-image:-o-linear-gradient(#f393bd, #f393bd) !important;
-	background-image:linear-gradient(#f393bd, #f393bd) !important;
-}
-#risk .ui-btn {
-    height: 30px;
-}
 .ui-icon-shadow {
     box-shadow: none !important;
 }
@@ -537,4 +231,8 @@ img.centered {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+#mainbtn .ui-btn-inner {
+padding: 0.3em !important;
 }
