--- a/style.css
+++ b/style.css
@@ -563,7 +563,7 @@ img.centered {
 #searchwell {
 	width:90%;
 	padding-bottom:10px;
-  padding-left: 1%;
+  padding-left:2%;
 }
 .unselected {
 	/*	background-color: #ECECED; 
@@ -576,7 +576,7 @@ img.centered {
 	margin-right: 10px;
 	padding-bottom: 5px;
 	text-align: left;
-	width: 240px;
+	width:320px;/* 240px;*/
 	word-wrap: break-word;
 }
 #map {
@@ -956,4 +956,18 @@ padding: .34em .6em !important;
 
 .ui-widget {
 font-family: 'Conv_ufonts.com_whitney-light_1_' !important;
+}
+
+
+.ui-state-default.okbtn {
+	background-image:none !important;
+background:#eb008b !important; /* Old browsers */
+	background:-moz-linear-gradient(top, #eb008b 0%, #9c005d 100%) !important; /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eb008b), color-stop(100%, #9c005d)) !important; /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #eb008b 0%, #9c005d 100%) !important; /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #eb008b 0%, #9c005d 100%) !important; /* Opera 11.10+ */
+	background:-ms-linear-gradient(top, #eb008b 0%, #9c005d 100%) !important; /* IE10+ */
+	background: linear-gradient(to bottom, #eb008b 0%, #9c005d 100%) !important; /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eb008b', endColorstr='#9c005d', GradientType=0 ) !important; /* IE6-9 */
+color: #FFFFFF !important;
 }
