--- a/style.css
+++ b/style.css
@@ -571,6 +571,8 @@ img.centered {
 	background-image: -o-linear-gradient(#F831A3, #F831A3) !important;
 	background-image: linear-gradient(#F831A3, #F831A3) !important;
 	Color: #fff !important;
+	margin-left: 10px;
+    margin-right: 10px;
 }
 #locatecenter .ui-select .ui-icon, #locatecenter .ui-select .ui-widget-content .ui-icon {
 	background-color: transparent;
@@ -585,6 +587,7 @@ img.centered {
 	width: 90%;
 	padding-bottom: 10px;
 	padding-left: 2%;
+	 padding-top: 2%;
 }
 .unselected {
 	/*	background-color: #ECECED; 
@@ -598,6 +601,7 @@ img.centered {
 	text-align: left;
 	width: 320px;/* 240px;*/
 	word-wrap: break-word;
+	padding-top: 2%;
 }
 #map {
 	border: 3px solid #666;
